# schwarzschild-raytracer-tui-public

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md
src/: constants.rs  main.rs
src/camera/: camera.rs  mod.rs
src/physics/: metric.rs  mod.rs  ray.rs
src/render/: framebuffer.rs  mod.rs  renderer.rs  scene.rs
src/tui/: app.rs  mod.rs  ui.rs
