[package]
name = "schwarzschild-raytracer-tui"
version = "0.1.0"
edition = "2024"
description = "Real-time Schwarzschild black hole raytracer in the terminal"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
rayon = "1.10"
glam = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
